--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-numpy~=1.23.1
+numpy~=1.23.2
 torch~=1.12.1
 timm~=0.6.7
 torchvision~=0.13.1
 PyYAML~=6.0
+termcolor~=1.1.0
+tensorboard~=2.10.0
+yacs~=0.1.8
